--- a/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<!--#region  namespace-->
+<Page
     x:Class="Onliner_for_windows_10.Model.Message.MessagePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -17,9 +18,11 @@
     xmlns:SW="using:Universal.UI.Xaml.Controls"
     xmlns:UserControls="using:Onliner_for_windows_10.UserControls"
     mc:Ignorable="d">
+    <!--#endregion-->
 
+    <!--#region  Resources-->
     <Page.Resources>
-        
+
         <!-- Region Converters -->
         <converter:UnreadVisibilityConverter x:Key="TrueOrFalseUnread"/>
         <converter:JavaScriptTimeToSharp x:Key="JavaScriptTime"/>
@@ -461,23 +464,23 @@
 
         <DataTemplate x:Key="MessageDataList">
             <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto"/>
-                            <RowDefinition Height="auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="5"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Rectangle Width="5" 
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Rectangle Width="5" 
                                Fill="GreenYellow" 
                                Grid.RowSpan="2" 
                                Margin="0,0,0,0" 
                                Visibility="{Binding unread, Converter={StaticResource TrueOrFalseUnread}}"/>
-                        <CheckBox Name="ChekcListItem" 
+                    <CheckBox Name="ChekcListItem" 
                               Tag="{Binding id}" 
                               Grid.Column="1" 
                               Grid.RowSpan="2"
@@ -486,16 +489,16 @@
                               Visibility="{Binding ElementName=MessagePageName, Path=DataContext.ListCheckBoxVisible, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}"
                               Style="{StaticResource CheckBoxListStyle}" IsChecked="{Binding IsChecked, Mode=TwoWay}"
                               Margin="10,0,10,0">
-                            <Interactivity:Interaction.Behaviors>
-                                <Core:EventTriggerBehavior EventName="Checked">
+                        <Interactivity:Interaction.Behaviors>
+                            <Core:EventTriggerBehavior EventName="Checked">
                                 <Core:InvokeCommandAction Command="{Binding Path=DataContext.CheckListItemChecked, ElementName=InMessageContentListview}" CommandParameter="{Binding ElementName=ChekcListItem, Path=Tag}"/>
-                                </Core:EventTriggerBehavior>
-                                <Core:EventTriggerBehavior EventName="Unchecked">
+                            </Core:EventTriggerBehavior>
+                            <Core:EventTriggerBehavior EventName="Unchecked">
                                 <Core:InvokeCommandAction Command="{Binding Path=DataContext.CheckListItemUnChecked, ElementName=InMessageContentListview}" CommandParameter="{Binding ElementName=ChekcListItem, Path=Tag}"/>
-                                </Core:EventTriggerBehavior>
-                            </Interactivity:Interaction.Behaviors>
-                        </CheckBox>
-                        <HyperlinkButton Name="UserHyperlinkButton" 
+                            </Core:EventTriggerBehavior>
+                        </Interactivity:Interaction.Behaviors>
+                    </CheckBox>
+                    <HyperlinkButton Name="UserHyperlinkButton" 
                                      Content="{Binding authorName}" 
                                      Grid.Row="0" 
                                      Grid.Column="2" 
@@ -504,32 +507,33 @@
                                      FontWeight="Bold" 
                                      HorizontalAlignment="Left" 
                                      Click="UserHyperlinkButton_Click"/>
-                        <TextBlock Text="{Binding time, Converter={StaticResource JavaScriptTime}}" 
+                    <TextBlock Text="{Binding time, Converter={StaticResource JavaScriptTime}}" 
                                Grid.Row="0" 
                                Grid.Column="3" 
                                Foreground="Gray" 
                                FontSize="14" 
                                HorizontalAlignment="Stretch" 
                                TextAlignment="Right" Margin="2"/>
-                        <TextBlock Text="{Binding subject}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,5" TextWrapping="Wrap" FontSize="16" HorizontalAlignment="Stretch" Style="{ThemeResource HeaderTextBlockStyle}"/>
-                    </Grid>
-                </Border>
-            </DataTemplate>
-        
-    </Page.Resources>
+                    <TextBlock Text="{Binding subject}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,5" TextWrapping="Wrap" FontSize="16" HorizontalAlignment="Stretch" Style="{ThemeResource HeaderTextBlockStyle}"/>
+                </Grid>
+            </Border>
+        </DataTemplate>
 
-    
+    </Page.Resources>
+    <!--#endregion-->
+
     <Grid Background="{ThemeResource BackGroundCustomHeaderColorBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
+        <!--#region  Visual State-->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="VisualStateGroup">
                 <VisualState x:Name="MobileSate">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="350" />
+                        <AdaptiveTrigger MinWindowWidth="300" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="ViewMessageContent.(Grid.Column)" Value="0" />
@@ -548,22 +552,24 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        
+        <!--#endregion-->
+
+        <!--#region  PageHeader-->
         <controls:PageHeader Text="Сообщения" FontWeight="Bold"
                              Frame="{x:Bind Frame}"
                              Background="{ThemeResource BackGroundCustomHeaderColorBrush}"
                              Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                              VisualStateNarrowMinWidth="1"
                              BackButtonVisibility="Collapsed"/>
+        <!--#endregion-->
 
-
-
+        <!--#region MainGrid-->
         <Grid Background="{ThemeResource BackGroundCustomColorBrush}" Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" MinWidth="400"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <!-- Message List -->
+            <!--#region Message List -->
             <Grid Name="GridMessage" Grid.Column="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
@@ -572,6 +578,7 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
+                <!--#region  GridHeader-->
                 <ListView x:Name="TabListview" 
                               ItemContainerStyle="{ThemeResource HeaderTabListViewItemContainerStyle}" 
                               Background="{ThemeResource BackGroundCustomHeaderChildColorBrush}"
@@ -600,7 +607,9 @@
                                      FontSize="20"  Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                     </ListViewItem>
                 </ListView>
+                <!--#endregion-->
 
+                <!--#region Message List-->
                 <CheckBox x:Name="CheckAllCB" Content="Выбрать все" Margin="5,0,0,0" Grid.Row="1" 
                           Visibility="{Binding ListCheckBoxVisible, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <Interactivity:Interaction.Behaviors>
@@ -634,7 +643,6 @@
                                 <Setter Property="Padding" Value="0"/>
                             </Style>
                         </SW:SwipeListView.ItemContainerStyle>
-
                         <SW:SwipeListView.ItemLeftContentTemplate>
                             <DataTemplate>
                                 <Grid Padding="20" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -654,8 +662,8 @@
 
                 <CommandBar IsSticky="True" Grid.Row="3">
                     <AppBarButton x:Name="NewMessage" Icon="Add" Label="Написать" Command="{Binding NewMessageCreate}"/>
-                    <AppBarButton Icon="List" Label="Выбрать" Command="{Binding CheckListItemCommand}"/>
-                    <AppBarButton Icon="Switch" Label="Действие" Visibility="{Binding ListCheckBoxVisible, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <AppBarButton Icon="AllApps" Label="Выбрать" Command="{Binding CheckListItemCommand}"/>
+                    <AppBarButton Icon="List" Label="Действие" Visibility="{Binding ListCheckBoxVisible, Mode=TwoWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <AppBarButton.Flyout>
                             <MenuFlyout>
                                 <MenuFlyoutItem Text="Сохранить" Command="{Binding SaveMarkMessageCommand}"/>
@@ -669,9 +677,15 @@
                 <ProgressRing Width="100" Height="100" Foreground="Blue"
                               HorizontalAlignment="Center" VerticalAlignment="Center" Grid.RowSpan="4"
                               IsActive="{Binding ProgressRingMessage,Mode=TwoWay}"/>
+                <!--#endregion-->
             </Grid>
-            <!-- Read Message -->
-            <Grid Grid.Column="1" Name="ViewMessageContent" Background="White" Visibility="{Binding ViewContentMessage, Converter={StaticResource BoolToVisible}}">
+            <!--#endregion-->
+
+            <!--#region Read Message -->
+            <Grid x:Name="ViewMessageContent" 
+                  Grid.Column="1"
+                  Background="White"
+                  Visibility="{Binding ViewContentMessage, Converter={StaticResource BoolToVisible}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="auto"/>
@@ -692,63 +706,50 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="{Binding AuthorName}" 
-                           FontSize="18" 
-                           FontWeight="Bold" 
-                           Margin="5,2,2,2"/>
-                            <Ellipse Width="80"  Margin="10,5,5,5"
-                       Height="80" 
-                       Grid.Row="1" 
-                       HorizontalAlignment="Left">
+                                         FontSize="18" 
+                                         FontWeight="Bold" 
+                                         Margin="5,2,2,2"/>
+                            <Ellipse Width="80"  
+                                     Margin="10,5,5,5"
+                                     Height="80" 
+                                     Grid.Row="1" 
+                                     HorizontalAlignment="Left">
                                 <Ellipse.Fill>
                                     <ImageBrush x:Name="ImageS" ImageSource="{Binding AuthorImage}" />
                                 </Ellipse.Fill>
                             </Ellipse>
                             <TextBlock Text="{Binding TimeAuthor, Converter={StaticResource DateTimeToSharp}}" 
-                           Grid.Row="0" 
-                           Grid.Column="1" 
-                           VerticalAlignment="
-                           Center" Margin="2"/>
+                                       Grid.Row="0" 
+                                       Grid.Column="1" 
+                                       VerticalAlignment="Center"
+                                       Margin="2"/>
                             <TextBlock Text="{Binding SubjectMessage}"
-                           Grid.Row="1" 
-                           Grid.Column="1" 
-                           FontSize="18" 
-                           Margin="5" 
-                           TextWrapping="Wrap"/>
+                                         Grid.Row="1" 
+                                         Grid.Column="1" 
+                                         FontSize="18" 
+                                         Margin="5" 
+                                         TextWrapping="Wrap"/>
                         </Grid>
                         <WebView Name="WebViewMessage" helper:WebViewHelper.Html="{Binding HtmlMessageContent}" Grid.Row="1" />
                     </Grid>
                 </ScrollViewer>
                 <CommandBar Grid.Row="2">
-                    <AppBarButton Name="Answer" Icon="ReShare" Label="Ответить" Command="{Binding AnswerSendMessageCommand}"/>
-                    <AppBarButton Name="AnswerQuote" Icon="ContactPresence" Label="Ответить с цитатой" Command="{Binding AnswerSendMessageReplyQuoteCommand}"/>
+                    <AppBarButton Name="Answer" Icon="MailReply" Label="Ответить" Command="{Binding AnswerSendMessageCommand}"/>
+                    <AppBarButton Name="AnswerQuote" Icon="MailReplyAll" Label="Ответить с цитатой" Command="{Binding AnswerSendMessageReplyQuoteCommand}"/>
                     <AppBarButton Label="Действие" Icon="List">
-                        <MenuFlyout>
-                            <MenuFlyoutItem Text="Спам" Command="{Binding SpamMarkMessageCommand}" Visibility="{Binding SaveButtonVisible, Converter={StaticResource BoolToVisible}}"/>
-                            <MenuFlyoutItem Text="Сохранить" Command="{Binding SaveMessageCommand}"/>
-                            <MenuFlyoutItem Text="Удалить" Command="{Binding DeleteMessageCommand}"/>
-                        </MenuFlyout>
+                        <AppBarButton.Flyout>
+                            <MenuFlyout>
+                                <MenuFlyoutItem Text="Спам" Command="{Binding SpamMarkMessageCommand}" Visibility="{Binding SaveButtonVisible, Converter={StaticResource BoolToVisible}}"/>
+                                <MenuFlyoutItem Text="Сохранить" Command="{Binding SaveMessageCommand}"/>
+                                <MenuFlyoutItem Text="Удалить" Command="{Binding DeleteMessageCommand}"/>
+                            </MenuFlyout>
+                        </AppBarButton.Flyout>
                     </AppBarButton>
                 </CommandBar>
             </Grid>
-            <Grid Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="{Binding MessageLogoContent, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <TextBlock Text="&#xE8BD;" 
-                               FontSize="72"
-                               FontFamily="Segoe MDL2 Assets"
-                               HorizontalAlignment="Center"
-                               VerticalAlignment="Center"
-                               Margin="10"
-                               Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                <TextBlock Text="Пожалуйста, выберите сообщение или создайте новое." 
-                               FontSize="24"
-                               TextWrapping="Wrap" 
-                               Grid.Row="1"
-                               Margin="10"
-                               Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-            </Grid>
+            <!--#endregion-->
         </Grid>
+        <!--#endregion-->
+
     </Grid>
 </Page>
