--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<!--#region namespace-->
+<Page x:Class="Onliner_for_windows_10.ProfilePage.ProfilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Onliner_for_windows_10.ProfilePage"
@@ -6,14 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Onliner_for_windows_10="using:Onliner_for_windows_10"
-    x:Class="Onliner_for_windows_10.ProfilePage.ProfilePage"
     xmlns:userControls="using:Onliner_for_windows_10.UserControls"
     xmlns:controls="using:Template10.Controls"
     xmlns:converter="using:Onliner.Converters"
     xmlns:tile="using:Onliner_for_windows_10.Tiles.TileTemplates"
     xmlns:model="using:Onliner_for_windows_10.ProfilePage"
     mc:Ignorable="d">
-    <!-- Data for listview-->
+<!--#endregion-->
+
+    <!--#region Resources-->
     <Page.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BoolToVisibility"/>
         <DataTemplate x:Key="DataProfileStyleList">
@@ -291,7 +293,7 @@
                                     <VisualState x:Name="PointerOver">
                                         <VisualState.Setters>
                                             <Setter Target="ContentPresenter.(ContentPresenter.Background).(SolidColorBrush.Color)" Value="{ThemeResource BackGroundCustomMainElementColorBrush}">
-                               
+
                                             </Setter>
                                         </VisualState.Setters>
                                         <Storyboard>
@@ -349,13 +351,14 @@
             </Setter>
         </Style>
     </Page.Resources>
+    <!--#endregion-->
 
     <Grid Background="{ThemeResource BackGroundCustomHeaderColorBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
+
         <!--#region Visual State Manage-->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="VisualStateGroup">
@@ -386,7 +389,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
         <!--#endregion-->
-        
+
         <!--#region Page Header-->
         <controls:PageHeader x:Name="pageHeader" 
                              Text="Личный кабинет"
@@ -416,12 +419,12 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <!-- Profile image-->
+                    <!--#region Profile image-->
                     <StackPanel x:Name="stackPanelAccauntInfo" 
-			Grid.Column="0" 
-			Grid.Row="0" 
-			HorizontalAlignment="Stretch"
-			Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
+			                    Grid.Column="0" 
+			                    Grid.Row="0" 
+			                    HorizontalAlignment="Stretch"
+			                    Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
                         <StackPanel.ChildrenTransitions>
                             <TransitionCollection>
                                 <EdgeUIThemeTransition Edge="Bottom"/>
@@ -434,12 +437,12 @@
                                 </TransitionCollection>
                             </StackPanel.ChildrenTransitions>
                             <TextBlock x:Name="AccauntNameTextBlock" 
-					Text="{Binding NickName}" 
-					TextAlignment="Center" 
-					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
-					FontSize="24" Style="{ThemeResource SubtitleTextBlockStyle}"
-					FontWeight="Bold" 
-					Margin="0,10,0,10"/>
+					                    Text="{Binding NickName}" 
+					                    TextAlignment="Center" 
+					                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
+					                    FontSize="24" Style="{ThemeResource SubtitleTextBlockStyle}"
+					                    FontWeight="Bold" 
+					                    Margin="0,10,0,10"/>
 
                             <Ellipse  Width="150" Height="150" VerticalAlignment="Top" HorizontalAlignment="Center">
                                 <Ellipse.Fill>
@@ -452,43 +455,61 @@
                             </Ellipse>
 
                             <TextBlock x:Name="StatusProfileTextBlock" 
-					Text="online" 
-					TextAlignment="Center" 
-                    Foreground="{ThemeResource ForegroundCustomBlackBrush}"
-					Margin="0,10,0,0"/>
+					                    Text="online" 
+					                    TextAlignment="Center" 
+                                        Foreground="{ThemeResource ForegroundCustomBlackBrush}"
+					                    Margin="0,10,0,0"/>
                         </StackPanel>
-                        <Grid  
-				HorizontalAlignment="Stretch" 
-				VerticalAlignment="Bottom" 
-				Grid.ColumnSpan="2" 
-				Margin="0,10,0,0" 
-				Grid.Column="0" 
-				Grid.Row="0" x:Name="ButtonsControlStackPanel">
+
+                        <Grid   x:Name="ButtonsControlStackPanel"
+				                HorizontalAlignment="Stretch" 
+				                VerticalAlignment="Bottom" 
+				                Grid.ColumnSpan="2" 
+				                Margin="0,10,0,0" 
+				                Grid.Column="0" 
+				                Grid.Row="0">
                             <Grid.ChildrenTransitions>
                                 <TransitionCollection>
                                     <EdgeUIThemeTransition Edge="Left"/>
                                 </TransitionCollection>
                             </Grid.ChildrenTransitions>
-                            <Button Name="SendMessageButton" Height="35" FontSize="16" HorizontalAlignment="Stretch" BorderThickness="0" Command="{Binding ActionWithMessageCommand}" Style="{StaticResource SendMessageButtonStyle}" Visibility="Collapsed">
+                            <Button Name="SendMessageButton"
+                                    Height="35" FontSize="16"
+                                    HorizontalAlignment="Stretch"
+                                    BorderThickness="0" 
+                                    Command="{Binding ActionWithMessageCommand}" 
+                                    Style="{StaticResource SendMessageButtonStyle}"
+                                    Visibility="Collapsed">
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="&#xE715;" FontFamily="Segoe MDL2 Assets" FontSize="22" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
-                                    <TextBlock Name="SendMessageTextBox" Text="{Binding TextButtonMessageContent}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0" FontFamily="Nirmala UI Semilight" Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
+                                    <TextBlock Text="&#xE715;"
+                                               FontFamily="Segoe MDL2 Assets"
+                                               FontSize="22" HorizontalAlignment="Center" 
+                                               VerticalAlignment="Center"
+                                               Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
+                                    <TextBlock Name="SendMessageTextBox" 
+                                               Text="{Binding TextButtonMessageContent}"
+                                               HorizontalAlignment="Center" 
+                                               VerticalAlignment="Center"
+                                               Margin="5,0,0,0" 
+                                               FontFamily="Nirmala UI Semilight" 
+                                               Foreground="{ThemeResource ForegroundCustomWhiteBrush}"/>
                                 </StackPanel>
                             </Button>
-
                         </Grid>
                     </StackPanel>
-                    <!-- Other data-->
+                    <!--#endregion-->
+
+                    <!--#region Other data-->
                     <Grid Name="PivotControlInformation" Grid.ColumnSpan="2" Grid.Row="1" Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <ListView x:Name="DataProfileList" 
-				                        ItemTemplate="{StaticResource DataProfileStyleList}"
-                                       Background="{ThemeResource BackGroundCustomColorBrush}" 
+				                  ItemTemplate="{StaticResource DataProfileStyleList}"
+                                  Background="{ThemeResource BackGroundCustomColorBrush}" 
                                   ItemsSource="{Binding ProfileDataCollection}"
-				                        HorizontalAlignment="Stretch" Grid.Row="1" >
+				                  HorizontalAlignment="Stretch" Grid.Row="1" >
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
                                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -496,10 +517,12 @@
                             </ListView.ItemContainerStyle>
                         </ListView>
                     </Grid>
+                    <!--#endregion-->
                     <StackPanel/>
                 </Grid>
             </ScrollViewer>
         </Grid>
+
         <ProgressRing Width="100" Height="100" 
                       IsActive="{Binding ProgressRingIsActive, Mode=TwoWay}" Foreground="Blue"
                       HorizontalAlignment="Center"
