--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿<!--#region  namespace-->
+    <Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     x:Name="CommentsView"
@@ -20,7 +21,9 @@
     xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
     x:Class="Onliner_for_windows_10.Views.ViewNewsPage"
     mc:Ignorable="d">
-
+<!--#endregion-->
+        
+    <!--Region Resources-->
     <Page.Resources>
         <DataTemplate x:Key="HeaderTemlate">
             <Grid HorizontalAlignment="Stretch">
@@ -128,6 +131,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
         <Selector:ListViewItemSelector
             x:Key="ListViewItemSelector"
             HeaderTemlate="{StaticResource HeaderTemlate}"
@@ -141,12 +145,15 @@
 
         <conver:BooleanToVisibilityConverter x:Key="BooleToVisible"/>
     </Page.Resources>
+    <!--EndRegion-->
 
+    <!--#region  MainGrid Content-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
         <!--#region Visual State Manager-->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="FullNewsVisualStateGroup">
@@ -208,6 +215,7 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
+
             <Grid Grid.Row="0">
                 <Grid x:Name="MainGrid">
                     <Grid.ColumnDefinitions>
@@ -237,13 +245,14 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
-                        <Grid>
 
+                        <!--#region CommentsList-->
+                        <Grid>
                             <ListView x:Name="CommentsListView" 
-                              ItemsSource="{Binding CommentsItem}" 
-                              HorizontalAlignment="Stretch" 
-                              Style="{StaticResource CommentsListViewStyle}"
-                              ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
+                                      ItemsSource="{Binding CommentsItem}" 
+                                      HorizontalAlignment="Stretch" 
+                                      Style="{StaticResource CommentsListViewStyle}"
+                                      ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
                                 <ListView.ItemContainerTransitions>
                                     <TransitionCollection>
                                         <EntranceThemeTransition IsStaggeringEnabled="True" 
@@ -265,8 +274,9 @@
                                                     <RowDefinition Height="auto"/>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="auto"/>
-
                                                 </Grid.RowDefinitions>
+
+                                                <!--Image user-->
                                                 <Ellipse Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Width="35"  Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5">
                                                     <Ellipse.Fill>
                                                         <ImageBrush>
@@ -276,11 +286,18 @@
                                                         </ImageBrush>
                                                     </Ellipse.Fill>
                                                 </Ellipse>
+                                                <!--Name user-->
                                                 <TextBlock x:Name="NickNameTextBlock" Text="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Margin="3" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                                                <!--Time-->
                                                 <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="3" FontSize="14" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
+                                                <!--Content Viewer-->
                                                 <UserControl:CommentsContentViewer x:Name="CommentsContentViewer" UserControl:CommentsContentViewer.HtmlString="{Binding Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
+                                                <!--Like-->
                                                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
-                                                    <TextBlock Text="&#xE19F;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
+                                                    <Grid>
+                                                        <TextBlock Text="&#xE006;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
+                                                        <TextBlock Text="&#xE0A5;" FontSize="14" Foreground="Red" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Visibility="{Binding Like, Converter={StaticResource BooleToVisible}}"/>
+                                                    </Grid>
                                                     <TextBlock Text="{Binding LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
                                                     <Interactivity:Interaction.Behaviors>
                                                         <Core:EventTriggerBehavior EventName="Tapped">
@@ -289,8 +306,9 @@
                                                         </Core:EventTriggerBehavior>
                                                     </Interactivity:Interaction.Behaviors>
                                                 </StackPanel>
-                                                <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right">
-                                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                                <!--Answer-->
+                                                <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Margin="2" HorizontalAlignment="Right">
+                                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ElementName=CommentsView, Path=DataContext.CommentsButtonVisible, Converter={StaticResource BooleToVisible}, Mode=TwoWay}">
                                                         <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
                                                         <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
                                                         <Interactivity:Interaction.Behaviors>
@@ -300,9 +318,15 @@
                                                             </Core:EventTriggerBehavior>
                                                         </Interactivity:Interaction.Behaviors>
                                                     </StackPanel>
-                                                    <StackPanel Orientation="Horizontal" Margin="6,0,0,0" Visibility="Collapsed">
+                                                    <StackPanel Orientation="Horizontal" Margin="6,0,0,0" Visibility="{Binding ElementName=CommentsView, Path=DataContext.CommentsButtonVisible, Converter={StaticResource BooleToVisible}, Mode=TwoWay}">
                                                         <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
                                                         <TextBlock Text="Цитировать" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                                                        <Interactivity:Interaction.Behaviors>
+                                                            <Core:EventTriggerBehavior EventName="Tapped">
+                                                                <Core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.AnswerQuoteCommentCommand}" 
+                                                                                              CommandParameter="{Binding ElementName=CommentsListView, Path=SelectedItem}"/>
+                                                            </Core:EventTriggerBehavior>
+                                                        </Interactivity:Interaction.Behaviors>
                                                     </StackPanel>
                                                 </StackPanel>
                                             </Grid>
@@ -311,6 +335,8 @@
                                 </ListView.ItemTemplate>
                             </ListView>
                         </Grid>
+                        <!--#endregion-->
+                        
                         <ProgressBar Foreground="Blue" Background="Transparent" IsIndeterminate="{Binding CommentsProgressRing}" VerticalAlignment="Top"/>
                         <Button x:Name="DownListButton" Width="32" Height="32" Grid.Row="0" 
                                 VerticalAlignment="Top"
@@ -348,6 +374,8 @@
                                 </ControlTemplate>
                             </Button.Template>
                         </Button>
+
+                        <!--#region Comments add-->
                         <Grid HorizontalAlignment="Stretch" Background="LightGray" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -381,11 +409,13 @@
                                 HorizontalAlignment="Center"
                                 Command="{Binding CommentsAdd}" CommandParameter="{Binding ElementName=ContentCommentTextBox, Path=Text}"/>
                         </Grid>
+                        <!--#endregion-->
                     </Grid>
                     <!--#endregion-->
 
                 </Grid>
             </Grid>
+
             <ProgressRing Name="NewsProgressRing" 
                       Width="100" 
                       Height="100"
@@ -397,10 +427,11 @@
         <!--#endregion-->
 
     </Grid>
-
+    <!--#endregion-->
+    
     <Page.Transitions>
         <TransitionCollection>
-            <PaneThemeTransition Edge="Top"/>
+            <PaneThemeTransition Edge="Left"/>
         </TransitionCollection>
     </Page.Transitions>
 </Page>
