--- a/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
@@ -505,8 +505,8 @@
                                      FontSize="16" 
                                      Margin="0,5,0,0" 
                                      FontWeight="Bold" 
-                                     HorizontalAlignment="Left" 
-                                     Click="UserHyperlinkButton_Click"/>
+                                     HorizontalAlignment="Left" Command="{Binding Path=DataContext.UserProfileCommand, ElementName=InMessageContentListview}"
+                                     CommandParameter="{Binding authorId}"/>
                     <TextBlock Text="{Binding time, Converter={StaticResource JavaScriptTime}}" 
                                Grid.Row="0" 
                                Grid.Column="3" 
@@ -514,7 +514,15 @@
                                FontSize="14" 
                                HorizontalAlignment="Stretch" 
                                TextAlignment="Right" Margin="2"/>
-                    <TextBlock Text="{Binding subject}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,5" TextWrapping="Wrap" FontSize="16" HorizontalAlignment="Stretch" Style="{ThemeResource HeaderTextBlockStyle}"/>
+                    <TextBlock Text="{Binding subject}"
+                               Foreground="Gray"
+                               Grid.Row="1"
+                               Grid.Column="2" 
+                               Grid.ColumnSpan="2" 
+                               Margin="2,0,0,5" 
+                               TextWrapping="Wrap"
+                               FontSize="16"
+                               HorizontalAlignment="Stretch" Style="{ThemeResource HeaderTextBlockStyle}"/>
                 </Grid>
             </Border>
         </DataTemplate>
