--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -249,7 +249,7 @@
                         <!--#region CommentsList-->
                         <Grid>
                             <ListView x:Name="CommentsListView" 
-                                      ItemsSource="{Binding CommentsItem}" 
+                                      ItemsSource="{Binding Comments}" 
                                       HorizontalAlignment="Stretch" 
                                       Style="{StaticResource CommentsListViewStyle}"
                                       ItemContainerStyle="{StaticResource ListViewItemDisableTilt}">
@@ -287,7 +287,14 @@
                                                     </Ellipse.Fill>
                                                 </Ellipse>
                                                 <!--Name user-->
-                                                <TextBlock x:Name="NickNameTextBlock" Text="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Margin="3" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                                                <HyperlinkButton x:Name="NickNameTextBlock" Content="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14"  Margin="3,0,0,0" HorizontalAlignment="Left"  Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}">
+                                                    <Interactivity:Interaction.Behaviors>
+                                                        <Core:EventTriggerBehavior EventName="Click">
+                                                            <Core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.UserProfileCommand}" 
+                                                                                              CommandParameter="{Binding UserId}"/>
+                                                        </Core:EventTriggerBehavior>
+                                                    </Interactivity:Interaction.Behaviors>
+                                                </HyperlinkButton>
                                                 <!--Time-->
                                                 <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="3" FontSize="14" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
                                                 <!--Content Viewer-->
